# 235seconds

./: .gitignore  CMakeLists.txt  README.md  basemodule.cpp  basemodule.h  bll.h  button.cpp  button.h  clickermodule.cpp  clickermodule.h  diagram.qmodel  drawingmodule.cpp  drawingmodule.h  drawingpoint.cpp  drawingpoint.h  drawwires.cpp  drawwires.h  label.cpp  label.h  levermodule.cpp  levermodule.h  lightbulbsmodul.cpp  lightbulbsmodul.h  lightbulbsmodule.cpp  lightbulbsmodule.h  main.cpp  particlesystem.cpp  particlesystem.h  shifrmodule.cpp  shifrmodule.h  wiresmodule.cpp  wiresmodule.h
